# webai-defi-core

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/: config.py  main.py
src/db/: session.py
src/graphql/: queries.py
src/models/: __init__.py  chat.py  chat_history.py  user.py
src/routers/: chat.py  toolcall.py  user.py
src/schemas/: balance.py  chart.py  chat.py  pumpfuntoptokens.py  tokenvolume.py  topresponse.py  user.py
src/utils/: chat.py  logger.py  summarizer.py  websearch.py
tests/e2e/: test_chat_flow.py  test_generate_flow.py  test_multiple_messages.py  test_swap_tool.py  test_toolcall_flow.py  test_user_flow.py
