[tool.poetry]
name = "scumagentbackend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.37"
langchain = "^0.3.15"
langchain-openai = "^0.3.2"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.7.1"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
